--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         buildToolsVersion = "34.0.0"
-        minSdkVersion = 23
+        minSdkVersion = 24
         compileSdkVersion = 34
         targetSdkVersion = 34
         ndkVersion = "26.1.10909125"
@@ -16,6 +16,18 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
     }
+
+     allprojects {
+      repositories {
+       google()
+         maven { // (4)
+         url("$rootDir/../node_modules/detox/Detox-android")
+                 }
+             maven { url 'https://www.jitpack.io' }
+          }
+      }
+
+
 }
 
 apply plugin: "com.facebook.react.rootproject"
